--- a/MyIntern/src/app/Login/login/login.component.html
+++ b/MyIntern/src/app/Login/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <a [routerLink]="['/about']" routerLinkActive="router-link-active">About</a>
+  <a (click)="openAboutModal()">About</a>
   <a href="#policies">Policies and Guidelines</a>
   <a href="#general">General Information</a>
 </div>
