--- a/MyIntern/src/app/Login/login/login.component.html
+++ b/MyIntern/src/app/Login/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <a (click)="openAboutModal()">About</a>
-  <a href="#policies">Policies and Guidelines</a>
-  <a href="#general">General Information</a>
+  <a (click)="openPolicyModal()">Policies and Guidelines</a>
+  <a (click)="openInfoModal()">General Information</a>
 </div>
 
 <div class="parent">
